Update File Structure

--- a/Wikipedia_Viewer.html
+++ b/Wikipedia_Viewer.html
@@ -27,6 +27,11 @@
   <!--W3 CSS-->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
+  <!--Links to local files-->
+  <link rel="stylesheet" type="text/css" href="Wikipedia_Viewer.css">
+  <script type="text/javascript" src="Wikipedia_Viewer.js"></script>Wikipedia_Viewer
+  
+
 </head>
 
 <body>
